fixed mobile overflow

--- a/src/styles/blocks/powder.scss
+++ b/src/styles/blocks/powder.scss
@@ -1,8 +1,6 @@
 .powder {
   --arrow-width: 76px;
-
   &__content {
-    overflow: hidden;
     @include onDesktop {
       @include desktopGrid;
     }
@@ -94,7 +92,7 @@
   }
 
   &__image-box{
-    margin-right: -100px;
+    margin-right: -20px;
     overflow: hidden;
 
     @include onDesktop {
